# examples/axum-example/openapi.json
@@ -27,6 +27,33 @@
         }
       }
     },
+    "/complex-struct-body": {
+      "post": {
+        "operationId": "mod_file_with_complex_struct_body",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ComplexStructBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/health": {
       "get": {
         "operationId": "health",
@@ -268,6 +295,69 @@
   },
   "components": {
     "schemas": {
+      "ComplexStructBody": {
+        "type": "object",
+        "properties": {
+          "age": {
+            "type": "integer"
+          },
+          "array": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "map": {
+            "type": "object"
+          },
+          "name": {
+            "type": "string"
+          },
+          "nested_array": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StructBodyWithOptional"
+            }
+          },
+          "nested_map": {
+            "type": "object"
+          },
+          "nested_struct": {
+            "$ref": "#/components/schemas/StructBodyWithOptional"
+          },
+          "nested_struct_array": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StructBodyWithOptional"
+            }
+          },
+          "nested_struct_array_map": {
+            "type": "array",
+            "items": {
+              "type": "object"
+            }
+          },
+          "nested_struct_map": {
+            "type": "object"
+          },
+          "nested_struct_map_array": {
+            "type": "object"
+          }
+        },
+        "required": [
+          "name",
+          "age",
+          "nested_struct",
+          "array",
+          "map",
+          "nested_array",
+          "nested_map",
+          "nested_struct_array",
+          "nested_struct_map",
+          "nested_struct_array_map",
+          "nested_struct_map_array"
+        ]
+      },
       "StructBody": {
         "type": "object",
         "properties": {
